test/src/e2e_vm_tests/test_programs/should_fail/intrinsics/src/main.sw
script;

use std::assert::assert;

fn main() {

  let y = __eq("hi", "ho");
  let x = __eq(false, 11);
}
